--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ body {
 .our-clients-list {
   display: flex;
   flex-direction: row;
-  flex-wrap: no-wrap;
+  flex-wrap: nowrap;
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -690,37 +690,24 @@ body {
   margin-bottom: 4px;
 }
 
-.portfolio-project-card-link {
+.portfolio-thumb {
   position: relative;
+  width: 370px;
+  height: 294px;
+  overflow: hidden;
 }
 .overlay {
   display: block;
   position: absolute;
-  bottom: -2 * 294px;
+  top: 100%;
   left: 0;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   z-index: 1;
   opacity: 0;
   transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1),
     transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* animation-name: slide-up;
-  animation-duration: 1000ms;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-iteration-count: 1; */
-}
-
-/* @keyframes slide-up {
-  0% {
-    .overlay {bottom: -2 * 294px;  left: 0;}
-  }
-  50% {}
-  100% {}
-} */
-.portfolio-project-card-text {
-  background-color: #fff;
-  z-index: 3;
 }
 .overlay-text {
   display: block;
@@ -739,7 +726,7 @@ body {
 }
 .portfolio-projects-list-item:hover .overlay {
   opacity: 1;
-  transform: translateY(-294px);
+  transform: translateY(-100%);
 }
 .portfolio-projects-list-item:focus .overlay {
   opacity: 1;
