--- a/css/styles.css
+++ b/css/styles.css
@@ -287,19 +287,25 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
   box-sizing: border-box;
   width: 528px;
   height: 581px;
   border-radius: 4px;
   background-color: var(--white-color);
   cursor: pointer;
-  margin: auto;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  transition: tranform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* добавить scale + opacity при появлении modal */
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+  opacity: 0;
+}
 .close-button {
   position: absolute;
   top: 8px;
@@ -706,8 +712,8 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
   z-index: 1;
   opacity: 0;
-  transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .overlay-text {
   display: block;
